@@ -2,6 +2,8 @@
 v6.1.1-git
 ----------
 
+[mms] Don't show option to add senders to safe images list if the current
+      address cannot be added to the safe list.
 [mms] Don't log authentication exception messages from the IMAP library;
       authentication failures are already logged by the authentication code.
 
